force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_Code__c</fullName>
    <label>Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Output GST Taxable</fullName>
                <default>true</default>
                <label>Output GST Taxable</label>
            </value>
            <value>
                <fullName>input TCS</fullName>
            </value>
            <value>
                <fullName>Output GST NIL Rate</fullName>
            </value>
            <value>
                <fullName>Output GST Reverse Charge</fullName>
            </value>
            <value>
                <fullName>Output GST SEZ - NIL Rate</fullName>
            </value>
            <value>
                <fullName>Output GST SEZ - Taxable</fullName>
            </value>
            <value>
                <fullName>Output Advance Receipt CGST/SGST - 5%</fullName>
            </value>
            <value>
                <fullName>Output Advance Receipt CGST/SGST - 12%</fullName>
            </value>
            <value>
                <fullName>Output Advance Receipt CGST/SGST - 18%</fullName>
            </value>
            <value>
                <fullName>Output Advance Receipt CGST/SGST - 28%</fullName>
            </value>
            <value>
                <fullName>Output Advance Receipt IGST - 5%</fullName>
            </value>
            <value>
                <fullName>Output Advance Receipt IGST - 12%</fullName>
            </value>
            <value>
                <fullName>Output Advance Receipt IGST - 18%</fullName>
            </value>
            <value>
                <fullName>Output Advance Receipt IGST - 28%</fullName>
            </value>
            <value>
                <fullName>Foreign Exchange</fullName>
            </value>
            <value>
                <fullName>Import GST</fullName>
            </value>
            <value>
                <fullName>RCM Input GST</fullName>
            </value>
            <value>
                <fullName>output Interim TCS</fullName>
            </value>
            <value>
                <fullName>output TCS Payable</fullName>
            </value>
            <value>
                <fullName>Input GST</fullName>
            </value>
            <value>
                <fullName>Input GST 0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>