force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Token_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Token_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Token Amount</label>
    <type>Checkbox</type>
</CustomField>