force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Total_Approved_Amount_in_Per__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Approved_Amount_in_Per__c</fullName>
    <formula>((EYI_Approved_Total_Payments__c)*100)/  EYI_Opportunity__r.SyncedQuote.EYI_Agreement_Value__c</formula>
    <label>Total Approved Amount in Per</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>