force-app/main/default/objects/EYI_Payment_Receipt__c/fields/EYI_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Demand</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
                <isActive>false</isActive>
                <label>Principal</label>
            </value>
            <value>
                <fullName>Tax</fullName>
                <isActive>false</isActive>
                <label>Tax</label>
            </value>
            <value>
                <fullName>13-02</fullName>
                <isActive>false</isActive>
                <label>Token not needed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>