force-app/main/default/objects/EYI_Payment_Receipt__c/fields/PDC_Cheque_Status__c.field-meta.xml
<CustomField>
    <fullName>PDC_Cheque_Status__c</fullName>
    <label>PDC Cheque Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>