force-app/main/default/objects/EYI_Payment_Receipt__c/fields/TAT_Calculation__c.field-meta.xml
<CustomField>
    <fullName>TAT_Calculation__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(EYI_Reject_or_Approve_Date__c)), NOT(ISPICKVAL( EYI_Payment_Status__c , &apos;HOLD&apos;))) ,EYI_Reject_or_Approve_Date__c - DATEVALUE(CreatedDate) ,TODAY() - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAT Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>