force-app/main/default/objects/EYI_Payment_Receipt__c/validationRules/If_Inventory_Not_Present_on_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Inventory_Not_Present_on_Opp</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(EYI_Opportunity__r.EYI_Inventory__c )</errorConditionFormula>
    <errorMessage>No inventory mapping found. Please ensure the inventory is linked correctly before proceeding.</errorMessage>
</ValidationRule>