force-app/main/default/objects/EYI_Payment_Receipt__c/validationRules/Restrict_creation_SAP_Customer_NO_absent.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_creation_SAP_Customer_NO_absent</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(EYI_Opportunity__r.EYI_SAP_Customer_Number__c )</errorConditionFormula>
    <errorMessage>The customer is not registered in SAP. Please verify the SAP customer number.</errorMessage>
</ValidationRule>