force-app/main/default/objects/EYI_Payment_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>EYI_Opportunity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>EYI_Transaction_Type__c</columns>
    <columns>EYI_Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>